Added test cases and minor changes in service